--- a/BoxModel/app.css
+++ b/BoxModel/app.css
@@ -14,10 +14,12 @@ h1{
     border-width: 5px;
     border-color: #FF5858;
     border-style: solid;
+    margin: 10px;
 }
 #dois{
     background-color: rgb(224, 20, 76);
     border: 4px solid yellow;
+    margin: 10px;
 }
 #tres{
     background-color: rgb(255, 88, 88);   
@@ -30,4 +32,5 @@ h1{
     padding-top: 1%;
     padding-left: 10%;
     padding-right: 10%;
+    margin: 10px;
 }
